[package]
name = "crypto_quant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
url = "2.5"
log = "0.4"
env_logger = "0.11"
config = "0.14"
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1"
dashmap = "5.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
